--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 // Info https://containers.dev/implementors/json_reference/
 {
 //	name of the dev container
-	"name": "idea-demo",
+	"name": "pycharm-container",
 //	Or use a Dockerfile here, more info: https://containers.dev/guide/dockerfile
-	"image":  "openjdk:11"
+	"image":  "mcr.microsoft.com/devcontainers/python:1-${templateOption:imageVariant}"
 
 }
 
