--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 // Info https://containers.dev/implementors/json_reference/
 {
-//	name of the dev container
-	"name": "pycharm-container",
-//	Or use a Dockerfile here, more info: https://containers.dev/guide/dockerfile
-	"image":  "mcr.microsoft.com/devcontainers/python:1-${templateOption:imageVariant}"
-
-}
-
+	//	name of the dev container
+		"name": "pycharm-container",
+	//	Or use a Dockerfile here, more info: https://containers.dev/guide/dockerfile
+		"image":  "docker.io/python:slim-bullseye"
+	
+	}
+	
