--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,6 @@
 	//	name of the dev container
 		"name": "pycharm-container",
 	//	Or use a Dockerfile here, more info: https://containers.dev/guide/dockerfile
-		"image":  "docker.io/python:slim-bullseye"
+		"image":  "docker.io/python:latest"
 	
 }
